# multimodal-python-stack

./: .env.example  .gitignore  INTERNAL_SETUP.md  README.md  pyproject.toml  requirements.txt
docs/: MODEL_PRICING.md  blog_post.md
examples/: 00_debug_test.py  01_basic_webcam.py  02_security_monitor.py  03_quality_inspector.py  04_meeting_assistant.py  05_benchmark_providers.py
src/: __init__.py
src/core/: __init__.py  agent.py  config.py  types.py
src/inputs/: __init__.py  base.py  file.py  microphone.py  rtsp.py  url.py  webcam.py
src/memory/: __init__.py  sliding_window.py
src/models/: __init__.py  anthropic.py  base.py  fireworks.py  google.py  groq.py  modal.py  openai.py  together.py
src/tools/: __init__.py  base.py  notion.py  plc.py  robot.py  slack.py
src/utils/: __init__.py  audio.py  benchmark.py  image.py
